--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-        <a-assets>
+        <a-assets timeout="45000">
 
 
             <asset-item id="objectBulb.000.obj" src="assets/Bulb.000.obj"></asset-item>
