--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <div id="goodEndingPage" class="ending container hide">
         
-        <div class="goodEndingMessage col-xl-5 col-lg-6 col-md-7 col-sm-9 col-10 mx-auto">By choosing to send your research to the allies you were able to stall Lucie Kraus, and Pandora from launching their weapon. Once the allies received the information they used it launched a counter attack destroying Pandora Labs and saving millions of lives, but unfortunately not your own.</div>
+        <div class="goodEndingMessage col-xl-5 col-lg-6 col-md-7 col-sm-9 col-10 mx-auto">By choosing to send your research to the allies you were able to stall Lucie Kraus, and Pandora from launching their weapon. Once the allies received the information they used it and launched a counter attack destroying Pandora Labs and saving millions of lives, but unfortunately not your own.</div>
 
 
         <div class="playAgainContainer col-xl-2 col-lg-2 col-md-3 col-sm-4 col-4 mx-auto">
